# WebLogistics

./: .gitignore  backend.py  collection.py  forms  nuxt.config.ts  package-lock.json  package.json
Cpp/src/: CMakeLists.txt  addEntryInBook.cpp  addEntryInBookRDF.cpp  addEntryInUser.cpp  addEntryInUserRDF.cpp  getAllEntriesBook.cpp  getAllEntriesBookRDF.cpp  getAllEntriesUser.cpp  getAllEntriesUserRDF.cpp  getBookField.cpp  getBookFieldRDF.cpp  getBooksBasedOnCriteria.cpp  getBooksBasedOnCriteriaRDF.cpp  uppdateValueBookRDF.cpp  utils.cpp  utils.hpp
Cpp/src/xmlParser/: xmlparser.cpp  xmlparser.hpp
Querries/: Querries.txt
assets/css/: main.css  tailwind.css
composables/: common.ts  useAnimation.ts  useGetOutput.ts  useGetOutputBook.ts  useGetOutputUser.ts  useLLM.ts  useXMS.ts
layouts/: default.vue
pages/: colored.vue  details.vue  ind2.vue  index.vue  page2.vue  rdfVisualizer.vue  send  slaker.vue  tests.vue
public/xml/: BookOntology.owl  books.xml  scenarioBooks.rdf  scenarioUsers.rdf  transform.xsl  users.dtd  users.xml
server/api/: addEntryBook.ts  addEntryUser.ts  getAllEntriesBook.ts  getAllEntriesUser.ts  getBookField.ts  getLLMResponse.ts  getPreferenceBook.ts  scrapeBooks.ts  updateBookField.ts  uppdateBooks.ts  uppdateUsers.ts  utils.ts
server/content/xml/: books.dtd  books.xml  books.xsd  file.xml  scenarioBooks.rdf  scenarioUsers.rdf  transform.xsl  users.xml  users.xsd
server/plugins/: startup.ts
types/: book.ts  chatMessage.ts  user.ts
typescript/: xPathEval.ts
xml/: books.dtd  books.xml  books.xsd  user.xml  users.xml
